<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp" >

    <TextView
        android:id="@+id/task_form_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/task_form_header_text"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/task_title"
        android:hint="@string/task_title_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/task_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/ic_calendar"
        android:hint="@string/task_deadline_hint"
        android:focusable="false"
        android:clickable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/task_priority_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_priority_label_text"
            android:layout_marginEnd="64dp"
            android:layout_gravity="center_vertical"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/task_priority"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/task_save_button"
        android:text="@string/save_task_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center" />

</LinearLayout>