<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.krybed.todolist.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_task_manager"
        android:name="com.krybed.todolist.presentation.addtask.AddTaskFragment"
        android:label="@string/title_add_task"
        tools:layout="@layout/fragment_task_form" >

        <argument
            android:name="task_id"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="task_title"
            app:argType="string" />
        <argument
            android:name="task_deadline"
            app:argType="string" />
        <argument
            android:name="task_isDone"
            app:argType="boolean" />
        <argument
            android:name="task_priority"
            app:argType="string" />
        <argument
            android:name="task_createdAt"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.krybed.todolist.presentation.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>